--- a/colours.css
+++ b/colours.css
@@ -1,31 +1,10 @@
-body {
+body, html {
   margin: 0;
-}
-.home {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 14px;
-  text-decoration: none;
-  text-transform: uppercase;
-  background: transparent;
-  color: black;
-  border: 2px solid black;
-  display: inline-block;
-  padding: 10px 25px;
-  font-weight: 700;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-  margin: 1%;
-  position: fixed;
-  top: 0;
+  font-family: "Josefin Slab", Helvetica, sans-serif;
 }
 
-.home:hover {
-  color: white;
-  border-color: white;
-}
 .btn {
   text-align: center;
-  font-family: "Raleway", sans-serif;
   font-size: 1.6em;
   border: 2px solid black;
   background: transparent;
@@ -35,7 +14,8 @@ body {
   -webkit-transition: all 0.6s;
   z-index: 10;
 }
-.generateColours {
+
+.btn-wrap {
   position: fixed;
   bottom: 35%;
   width: 100%;
@@ -46,9 +26,10 @@ body {
   color: #d8d8d8;
   background: black;
 }
-button:focus {
+.btn:focus {
   outline: 0;
 }
+
 .box {
   width: 25%;
   height: 100vh;
@@ -57,8 +38,8 @@ button:focus {
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
+
 .hexCode {
-  font-family: "Josefin Sans", sans-serif;
   text-align: center;
   width: 100%;
   font-size: 4em;
@@ -68,6 +49,6 @@ button:focus {
 
 @media (max-width: 1000px) {
   .hexCode {
-    font-size: 2em;
+    font-size: 2.3em;
   }
 }
