--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
-body, html {
+/* Some ancient CSS from when I was just starting out, but it does the job */
+
+body,
+html {
   margin: 0;
   font-family: "Josefin Slab", Helvetica, sans-serif;
+  font-weight: bold;
+  letter-spacing: 0.2em;
 }
 
 .btn {
   text-align: center;
-  font-size: 1.6em;
+  font-size: 2em;
   border: 2px solid black;
   background: transparent;
   border-radius: 5px;
-  padding: 10px;
-  transition: all 0.6s;
-  -webkit-transition: all 0.6s;
+  padding: 15px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
   z-index: 10;
+  font-family: "Josefin Slab", Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .btn-wrap {
